# TeamEvokeYcce

./: package-lock.json  package.json  pyproject.toml  replit.nix
client/src/components/: Navigation.tsx  PortfolioChart.tsx  StockCard.tsx  StockMetrics.tsx  Watchlist.tsx
client/src/hooks/: useWebSocket.ts
client/src/pages/: Dashboard.tsx
dashboard/: models.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
evoke/: asgi.py  settings.py  urls.py  wsgi.py
server/: db.ts  index.ts  routes.ts  storage.ts  utils.ts
shared/: schema.ts
