[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.15.2",
    "djongo>=1.2.31",
    "psycopg2-binary>=2.9.10",
    "pymongo==3.12.3",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
]
